--- a/template.ipynb
+++ b/template.ipynb
@@ -29,22 +29,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report = dp.Report(\"Datapane template\")\n",
-    "report.save(path=\"template.html\", open=True)"
+    "v = dp.Blocks(\"Datapane template\")\n",
+    "dp.save_report(v, path=\"template.html\", open=True)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.5"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "a0a5145e6c304e2a9afaf5b930a2955b950bd4b81fe94f7c42930f43f42762eb"
@@ -52,5 +59,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
